NIFI-14336: Addressing PR comments